--- a/index.html
+++ b/index.html
@@ -141,17 +141,17 @@
                             <br>
                             <h1>covid risk deector</h1>
                             <p class="crd_desc" 
-                               style="font-family:Pragmatica Web Book;font-size: 18px;color: #999; "> 
+                               style="font-family:Cabin-Regular;font-size: 18px;color: #999; "> 
                                Side project
                             </p>
                             <p class="crd_desc2" 
-                               style="font-family:Pragmatica Web Book;font-size: 18px;color: #999; "> 
+                               style="font-family:Cabin-Regular;font-size: 18px;color: #999; "> 
                                <br>
                                This project utilizes the Python library, Scrapy, to deploy spiders and scrape a website that contains COVID 19 daily statistics
                                The scraped data is manipulated to evaluate a risk report. 
                                 <br>
                                 <br>
-	                            <p class="crd_tech" style="font-family:Pragmatica Web Book;font-size: 16px;color: #fefefe; padding-top: 142px; ">
+	                            <p class="crd_tech" style="font-family:Cabin-Regular;font-size: 16px;color: #fefefe; padding-top: 116px; ">
                                 Technologies: Python, Scrapy, Tkinter, Docker, GitHub
 
                                 </p>
@@ -165,17 +165,17 @@
                             <br>
                             <h1>Walk Walk Revolution</h1>
                             <p class="ww_desc" 
-                               style="font-family:Pragmatica Web Book;font-size: 15px;color: #999; "> 
+                               style="font-family:Cabin-Regular;font-size: 15px;color: #999; "> 
                                School project
                             </p>
                             <p class="ww_desc2" 
-                               style="font-family:Pragmatica Web Book;font-size: 15px;color: #999; "> 
+                               style="font-family:Cabin-Regular;font-size: 15px;color: #999; "> 
                                <br>
                                 WWR has an activity tracker that records daily steps, miles, 
                                 and other physical fitness activities to provide a scope of the users’ daily fitness progress
                                 <br>
                                 <br>
-	                            <p class="ww_tech" style="font-family:Pragmatica Web Book;font-size: 12px;color: #fefefe; ">
+	                            <p class="ww_tech" style="font-family:Cabin-Regular;font-size: 12px;color: #fefefe; ">
                                 Technologies: Java, Android Studio, Google Fit API, Firebase Test Lab, FireStore, 
                                 JUNIT, Espresso, Roboelectric, Cucumber, Zenhub, TravisCI, CircleCI, GitHub
 
@@ -190,17 +190,17 @@
                                 <br>
                                 <h1>Surfstore</h1>
                                 <p class="ss_desc" 
-                                   style="font-family:Pragmatica Web Book;font-size: 15px;color: #999; "> 
+                                   style="font-family:Cabin-Regular;font-size: 15px;color: #999; "> 
                                    School project
                                 </p>
                                 <p class="ss_desc2" 
-                                   style="font-family:Pragmatica Web Book;font-size: 15px;color: #999; "> 
+                                   style="font-family:Cabin-Regular;font-size: 15px;color: #999; "> 
                                    <br>
                                     A networked file storage application that is based on Dropbox, 
                                     and lets you sync files to and from the “cloud”.
                                     <br>
                                     <br>
-                                    <p class="ss_tech" style="font-family:Pragmatica Web Book;font-size: 13px;color: #fefefe; ">
+                                    <p class="ss_tech" style="font-family:Cabin-Regular;font-size: 13px;color: #fefefe; ">
                                     Technologies: Go, Github
                                     </p>
                                 </p>
@@ -214,16 +214,16 @@
                                 <br>
                                 <h1>DynamoDB</h1>
                                 <p class="dd_desc" 
-                                   style="font-family:Pragmatica Web Book;font-size: 15px;color: #999; "> 
+                                   style="font-family:Cabin-Regular;font-size: 15px;color: #999; "> 
                                    School project
                                 </p>
                                 <p class="dd_desc2" 
-                                   style="font-family:Pragmatica Web Book;font-size: 15px;color: #999; "> 
+                                   style="font-family:Cabin-Regular;font-size: 15px;color: #999; "> 
                                    <br>
                                    A distributed key-value store based on Amazon’s DynamoDB. Implements a gossip-based replication/configurable quorum-type system for reads and writes.
                                     <br>
                                     <br>
-                                    <p class="dd_tech" style="font-family:Pragmatica Web Book;font-size: 13px;color: #fefefe; ">
+                                    <p class="dd_tech" style="font-family:Cabin-Regular;font-size: 13px;color: #fefefe; ">
                                     Technologies: Go, Github
                                     </p>
                                 </p>
@@ -245,21 +245,21 @@
                 </div>
 
                 <div class="contact_list">
-                    <h1 style="text-align: center;padding-top: 20px;color: #fefefe;">Gmail : </h1>
+                    <h1 style="text-align: center;padding-top: 20px;color: #fefefe;font-family: Cabin-Medium;">Gmail : </h1>
                     <br>
-                    <h1 style="text-align: center;font-family:Pragmatica Web Book;font-size: 20px;color: #999;">
+                    <h1 style="text-align: center;font-family:Cabin-Regular;font-size: 20px;color: #999;">
                         grepo.froilan@gmail.com 
                     </h1>
                     <br>
-                    <h1 style="text-align: center;padding-top: 20px;color: #fefefe;">Github : </h1>
+                    <h1 style="text-align: center;padding-top: 20px;color: #fefefe;font-family: Cabin-Medium;">Github : </h1>
                     <br>
-                    <h1 style="text-align: center;font-family:Pragmatica Web Book;font-size: 20px;color: #999">
+                    <h1 style="text-align: center;font-family:Cabin-Regular;font-size: 20px;color: #999">
                         jofelgrepoUCSD
                     </h1>
                     <br>
-                    <h1 style="text-align: center;padding-top: 20px;color: #fefefe">LinkedIn : </h1>
+                    <h1 style="text-align: center;padding-top: 20px;color: #fefefe;font-family: Cabin-Medium;">LinkedIn : </h1>
                     <br>
-                    <h1 style="text-align: center;font-family:Pragmatica Web Book;font-size: 20px;color: #999; padding-bottom: 200px;">
+                    <h1 style="text-align: center;font-family:Cabin-Regular;font-size: 20px;color: #999; padding-bottom: 200px;">
                         linkedin.com/in/froilan-grepo-27864719b/
                     </h1>
                     <br>
