--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
-                        <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-                        <li class="nav__item"><a href="#skills" class="nav__link">Education</a></li>
-                        <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
-                        <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+                        <li class="nav__item"><a href="#home" class="nav__link active">HOME</a></li>
+                        <li class="nav__item"><a href="#about" class="nav__link">ABOUT</a></li>
+                        <li class="nav__item"><a href="#skills" class="nav__link">EDUCATION</a></li>
+                        <li class="nav__item"><a href="#work" class="nav__link">WORK</a></li>
+                        <li class="nav__item"><a href="#contact" class="nav__link">CONTACT</a></li>
                     </ul>
                 </div>
 
@@ -126,7 +126,7 @@
                                 Implemented sign in/authentication with AWS Amplify. Client allows users to scan homework, and convert image to base64 encoding, then sends data to backend (AWS & MATHPIX) using an API POST request.
                                 <br>
                                 <br>
-	                            <p class="mathly_tech" style="font-family:Cabin-Regular;font-size: 16px;color: #fefefe; ">
+	                            <p class="mathly_tech" style="font-family:Cabin-Regular; font-size: 16px;color: #fefefe; ">
                                     Technologies: Android Studio, Java, Amazon Web Service Amplify, Retrofit 2, GitHub 
                                 </p>
                             </p>
@@ -151,7 +151,7 @@
                                The scraped data is manipulated to evaluate a risk report. 
                                 <br>
                                 <br>
-	                            <p class="crd_tech" style="font-family:Cabin-Regular;font-size: 16px;color: #fefefe; padding-top: 116px; ">
+	                            <p class="crd_tech" style="font-family:Cabin-Regular; font-size: 16px;color: #fefefe; padding-top: 116px; ">
                                 Technologies: Python, Scrapy, Tkinter, Docker, GitHub
 
                                 </p>
