added fix deector

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
                         <div class="crd_title">
                             <br>
-                            <h1>covid risk detector potangina ni bok</h1>
+                            <h1>covid risk detector</h1>
                             <p class="crd_desc" 
                                style="font-family:Cabin-Regular;font-size: 18px;color: #999; "> 
                                Side project
